plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
    id "org.sonarqube" version "5.0.0.4638"
}

group = 'com.ilgrig'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.github.wimdeblauwe:error-handling-spring-boot-starter:4.2.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation('org.mapstruct:mapstruct:1.5.5.Final')
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-amqp', version: '3.2.5'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.5'
    annotationProcessor('org.mapstruct:mapstruct-processor:1.5.5.Final')
    annotationProcessor('org.projectlombok:lombok-mapstruct-binding:0.2.0')
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
    testImplementation 'org.testcontainers:jdbc'
    testImplementation 'org.testcontainers:postgresql'
    testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.mockito:mockito-core'
}

tasks.named('test') {
    useJUnitPlatform()
}
